--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,4 @@
-# Site settings
-title: AbdulRaoof
-email: mailtoraoof@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: arabisays
-github_username:  abdulraoof
-
-# Build settings
-markdown: kramdown
+name: "abdulraoof.com"
+description: "web blog of abdul raoof"
+url: "abdulraoo.com"
+paginate: 10
