--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,6 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+#include the pages directory where the pages are organised
+include: ["_pages"]
