added works to the navigation area

--- a/_config.yml
+++ b/_config.yml
@@ -49,9 +49,16 @@ collections:
   photos:
     output: true
 
-defaults:
-  - scope:
-    path: ""
-      type: photos
-  values:
-      layout: photo
+# defaults:
+#   -scope:
+#   path: ""
+#     type: photos
+#   values:
+#     layout: photo
+
+# defaults:
+#   - scope:
+#       path: ""
+#         type: photos
+#     values:
+#       layout: photo
